# workguard

./: Cargo.toml  tauri.conf.json
src/: main.rs
src/commands/: get_status.rs  mod.rs  reset_day.rs
src/config/: default_timer.rs  mod.rs
src/core/: calculator.rs  mod.rs  schedule.rs  state.rs  timer.rs
src/notifications/: mod.rs  notifier.rs
src/storage/: mod.rs  storage.rs
src/tray/: handlers.rs  menu.rs  mod.rs  tray_icon.rs
src/utils/: format_status.rs  format_work_state.rs  mod.rs
